--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-linaro-django-xmlrpc (0.6-2) UNRELEASED; urgency=low
+linaro-django-xmlrpc (0.6-2) unstable; urgency=low
 
   * Add extra build-dep and allow calculation of django dependency
 
- -- Neil Williams <codehelp@debian.org>  Wed, 05 Jun 2013 19:31:50 +0100
+ -- Neil Williams <codehelp@debian.org>  Wed, 05 Jun 2013 19:35:04 +0100
 
 linaro-django-xmlrpc (0.6-1) unstable; urgency=low
 
